[package]
name = "raster2svg"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2021"
description = "Convert raster graphics to stylish SVGs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "^0", default-features = false, features = ["svg", "v1_16"] }
image = { version = "0.23", features = ["jpeg", "png", "tiff", "bmp"] }
structopt = "0.3"
log = "0"
env_logger = { version = "0", default-features = false, features = ["atty", "termcolor", "humantime"] }
uom = { version = "0.32", features = ["use_serde"] }
ndarray = { version = "0.15", features = ["rayon"] }
rand = { version = "0.8", features = ["alloc"] }
spade = "1.8"
rustc-hash = "1.1"
num-traits = "0.2"
lyon_geom = "0.17"
bitvec = "1"
paste = "1"
ndarray-stats = "0.5"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.12"

[dev-dependencies]
pretty_assertions = "1.2"
